--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -8257,6 +8257,49 @@ class Trie {
 
 ```
 
+728. 自除数
+自除数 是指可以被它包含的每一位数整除的数。
+
+例如，128 是一个 自除数 ，因为 128 % 1 == 0，128 % 2 == 0，128 % 8 == 0。
+自除数 不允许包含 0 。
+
+给定两个整数 left 和 right ，返回一个列表，列表的元素是范围 [left, right] 内所有的 自除数 。
+
+提示：
+
+1 <= left <= right <= 104
+
+```js
+/**
+ * @param {number} left
+ * @param {number} right
+ * @return {number[]}
+ */
+var selfDividingNumbers = function(left, right) {
+	let ans=[];
+	for (let i=left;i<=right;i++){
+		let n=i.toString();
+		if (n.indexOf("0")===-1) {
+			let flag=true;
+			for (let j=0;j<n.length;j++){
+				if (i%Number(n[j])!==0) {
+					flag=false;
+					break;
+				}
+			}
+			if (flag) {
+				ans.push(i);
+			}
+		}
+	}
+	return ans;
+};
+
+let left = 1, right = 22;
+let result=selfDividingNumbers(left,right);
+console.log(result);
+```
+
 
 
 ## 747.至少是其他数字两倍的最大数
