--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -8726,6 +8726,98 @@ console.log(result);
 
 ```
 
+## 954. 二倍数对数组
+
+给定一个长度为偶数的整数数组 arr，只有对 arr 进行重组后可以满足 “对于每个 0 <= i < len(arr) / 2，都有 arr[2 * i + 1] = 2 * arr[2 * i]” 时，返回 true；否则，返回 false。
+
+提示：
+
+0 <= arr.length <= 3 * 104
+arr.length 是偶数
+-105 <= arr[i] <= 105
+
+超时
+
+```js
+/**
+ * @param {number[]} arr
+ * @return {boolean}
+ */
+var canReorderDoubled = function(arr) {
+	let n=arr.length;
+	arr.sort((a,b)=>a-b);
+	//console.log(arr);
+	let temp,index0;
+	while(arr.length>0){
+		temp=arr.shift();
+		if (temp<0) {
+			index0=arr.indexOf(temp/2);
+		}else{
+			index0=arr.indexOf(temp*2);
+		}
+		if (index0===-1) {
+			return false;
+		}else{
+			arr.splice(index0,1);
+		}
+	}
+	return true;
+};
+
+let arr = [4,-2,2,-4];
+let result=canReorderDoubled(arr);
+console.log(result);
+```
+
+hashmap
+
+```js
+/**
+ * @param {number[]} arr
+ * @return {boolean}
+ */
+var canReorderDoubled = function(arr) {
+	let n=arr.length;
+	if (n===0) {
+		return false;
+	}
+	arr.sort((a,b)=>b-a);
+	//console.log(arr);
+	let m=new Map();
+	m.set(arr[0],1);
+	for (let i=1;i<n;i++){
+		//console.log(s);
+		if (arr[i]>=0) {
+			if (m.has(arr[i]*2)) {
+				m.set(arr[i]*2,m.get(arr[i]*2)-1);
+				if (m.get(arr[i]*2)===0) {
+					m.delete(arr[i]*2);
+				}
+			}else{
+				m.set(arr[i],m.has(arr[i]) ? m.get(arr[i])+1 : 1);
+			}
+		}else{
+			if (m.has(arr[i]/2)) {
+				m.set(arr[i]/2,m.get(arr[i]/2)-1);
+				if (m.get(arr[i]/2)===0) {
+					m.delete(arr[i]/2);
+				}
+			}else{
+				m.set(arr[i],m.has(arr[i]) ? m.get(arr[i])+1 : 1);
+			}
+		}
+	}
+	//console.log(m);
+	return m.size===0;
+};
+
+let arr = [2,1,2,1,1,1,2,2];
+let result=canReorderDoubled(arr);
+console.log(result);
+```
+
+
+
 
 
 ## 969. 煎饼排序
