--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -8422,6 +8422,26 @@ let result=selfDividingNumbers(left,right);
 console.log(result);
 ```
 
+## 744. 寻找比目标字母大的最小字母
+
+给你一个排序后的字符列表 letters ，列表中只包含小写英文字母。另给出一个目标字母 target，请你寻找在这一有序列表里比目标字母大的最小字母。
+
+在比较时，字母是依序循环出现的。举个例子：
+
+如果目标字母 target = 'z' 并且字符列表为 letters = ['a', 'b']，则答案返回 'a'
+
+提示：
+
+2 <= letters.length <= 104
+letters[i] 是一个小写字母
+letters 按非递减顺序排序
+letters 最少包含两个不同的字母
+target 是一个小写字母
+
+```
+
+```
+
 
 
 ## 747.至少是其他数字两倍的最大数
