--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -5484,7 +5484,60 @@ let result=isAdditiveNumber(test);
 console.log(result);
 ```
 
-## 
+## 307.区域和检索 - 数组可修改
+
+给你一个数组 nums ，请你完成两类查询。
+
+其中一类查询要求 更新 数组 nums 下标对应的值
+另一类查询要求返回数组 nums 中索引 left 和索引 right 之间（ 包含 ）的nums元素的 和 ，其中 left <= right
+实现 NumArray 类：
+
+NumArray(int[] nums) 用整数数组 nums 初始化对象
+void update(int index, int val) 将 nums[index] 的值 更新 为 val
+int sumRange(int left, int right) 返回数组 nums 中索引 left 和索引 right 之间（ 包含 ）的nums元素的 和 （即，nums[left] + nums[left + 1], ..., nums[right]）
+
+```js
+var NumArray = function(nums) {
+    this.nums = nums;
+    const n = nums.length;
+    size = Math.floor(Math.sqrt(n));
+    this.sum = new Array(Math.floor((n + size - 1) / size)).fill(0); // n/size 向上取整
+    for (let i = 0; i < n; i++) {
+        this.sum[Math.floor(i / size)] += nums[i];
+    }
+};
+
+NumArray.prototype.update = function(index, val) {
+    this.sum[Math.floor(index / size)] += val - this.nums[index];
+    this.nums[index] = val;
+};
+
+NumArray.prototype.sumRange = function(left, right) {
+    const b1 = Math.floor(left / size), i1 = left % size, b2 = Math.floor(right / size), i2 = right % size;
+    if (b1 === b2) { // 区间 [left, right] 在同一块中
+        let sum = 0;
+        for (let j = i1; j <= i2; j++) {
+            sum += this.nums[b1 * size + j];
+        }
+        return sum;
+    }
+    let sum1 = 0;
+    for (let j = i1; j < size; j++) {
+        sum1 += this.nums[b1 * size + j];
+    }
+    let sum2 = 0;
+    for (let j = 0; j <= i2; j++) {
+        sum2 += this.nums[b2 * size + j];
+    }
+    let sum3 = 0;
+    for (let j = b1 + 1; j < b2; j++) {
+        sum3 += this.sum[j];
+    }
+    return sum1 + sum2 + sum3;
+};
+```
+
+
 
 ## 326. 3 的幂
 
@@ -8517,6 +8570,123 @@ var dominantIndex = function(nums) {
 let str1 = [3,6,1,0];
 let result=dominantIndex(str1);
 console.log(result);
+
+```
+
+## 762.二进制表示中质数个计算置位
+
+给你两个整数 left 和 right ，在闭区间 [left, right] 范围内，统计并返回 计算置位位数为质数 的整数个数。
+
+计算置位位数 就是二进制表示中 1 的个数。
+
+例如， 21 的二进制表示 10101 有 3 个计算置位。
+
+提示：
+
+1 <= left <= right <= 106
+0 <= right - left <= 104
+
+```js
+/**
+ * @param {number} left
+ * @param {number} right
+ * @return {number}
+ */
+var countPrimeSetBits = function(left, right) {
+	let ans=0;
+	let palimds=new Set();
+	let n=Math.ceil(Math.log2(right));
+	while(n>2){
+		let flag=true;
+		for(let i=2;i<=n/2;i++){
+			if (n%i===0) {
+				flag=false;
+				break;
+			}
+		}
+		if (flag) {
+			palimds.add(n);
+		}
+		n--;
+	}
+	palimds.add(2);
+	//console.log(palimds);
+	for(let i=left;i<=right;i++){
+		let s=i.toString(2);
+		let sum=0;
+		for (let c of s){
+			if (c==="1") {
+				sum+=1;
+			}
+		}
+		if (palimds.has(sum)) {
+			ans++;
+		}
+		//console.log(s,sum);
+	}
+
+	return ans;
+};
+
+let left = 10, right = 15;
+let result=countPrimeSetBits(left,right);
+console.log(result);
+```
+
+```js
+/**
+ * @param {number} left
+ * @param {number} right
+ * @return {number}
+ */
+var countPrimeSetBits = function(left, right) {
+	let ans=0;
+	for(let i=left;i<=right;i++){
+		if(isPrime(bitCount(i))){
+			ans++;
+		}
+	}
+	return ans;
+};
+
+const isPrime=(n)=>{
+	if (n<2) {
+		return false;
+	}
+	for (let i=2;i*i<=n;i++){
+		if (n%i===0) {
+			return false;
+		}
+	}
+	return true;
+}
+
+const bitCount=(n)=>{
+	return n.toString(2).split("0").join("").length;
+}
+
+let left = 10, right = 15;
+let result=countPrimeSetBits(left,right);
+console.log(result);
+```
+
+![二进制表示中质数个计算置位](E:\pogject\学习笔记\image\leetcode\二进制表示中质数个计算置位.png)
+
+```js
+var countPrimeSetBits = function(left, right) {
+    let ans = 0;
+    for (let x = left; x <= right; ++x) {
+        if (((1 << bitCount(x)) & 665772) != 0) {
+            ++ans;
+        }
+    }
+    return ans;
+};
+
+const bitCount = (x) => {
+    return x.toString(2).split('0').join('').length;
+}
+
 
 ```
 
