--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -245,36 +245,57 @@ console.log(result);
 
 方法一：动态规划
 
+![最长回文子串(动态规划)](E:\pogject\学习笔记\image\leetcode\最长回文子串(动态规划).png)
+
 ```js
 /**
  * @param {string} s
  * @return {string}
  */
 var longestPalindrome = function(s) {
-    if (s.length===1) {return 1;}
-    let maxLen=s.length;
-    let center=s.length>>1;
-    let flag1=false;
-    let flag2=false;
-    let newArr=[];  //
-    //从最长到最短判断
-    for (let i=0;i<s.length;i++){
-        for (let j=i;j<s.length;i++){
-            if (s[j]!==s[s.length-1-j]) {
+    let n=s.length;
+    if (n<2) {
+        return s;
+    }
 
-                flag1=true;
+    let maxLen=1;
+    let begin=0;
+    const dp=new Array(n);
+    //dp[i][j] 表示 s[i..j] 是否是回文串
+    for (let i=0;i<n;i++){
+        /// 初始化：所有长度为 1 的子串都是回文串
+        dp[i]=new Array(n).fill(false);
+        dp[i][i]=true;
+    }
+
+    // 递推开始, 先枚举子串长度
+    for(let L=2;L<=n;L++){
+        // 枚举左边界，左边界的上限设置可以宽松一些
+        for(let i=0;i<n;i++){
+            // 由 L 和 i 可以确定右边界，即 j - i + 1 = L 得
+            let j=L+i-1;
+            if (j>=n) {
+                // 如果右边界越界，就可以退出当前循环
                 break;
             }
-        }
-
-        for (let j=i;j<s.length;i++){
-            if (s[i]!==s[s.length-1-i]) {
-                flag1=true;
-                break;
+            if (s[i]!==s[j]) {
+                dp[i][j]=false;
+            }else{
+                if (j-i<3) {
+                    dp[i][j]=true;
+                }else{
+                    dp[i][j]=dp[i+1][j-1];
+                }
+            }
+            // 只要 dp[i][L] == true 成立，就表示子串 s[i..L] 是回文，此时记录回文长度和起始位置
+            if (dp[i][j] && j-i+1>maxLen) {
+                maxLen=j-i+1;
+                begin=i;
             }
         }
     }
-    return maxLen;
+
+    return s.slice(begin,begin+maxLen);
 };
 
 
@@ -282,6 +303,54 @@ let str1 = "babad";
 let result=longestPalindrome(str1);
 console.log(result);
 ```
+
+![最长回文子串(中心扩展算法)](E:\pogject\学习笔记\image\leetcode\最长回文子串(中心扩展算法).png)
+
+```js
+/**
+ * @param {string} s
+ * @return {string}
+ */
+var longestPalindrome = function(s) {
+    let n=s.length;
+    if (n<2) {
+        return s;
+    }
+
+    let start=0,end=0;
+    let len1,len2,len;
+    for (let i=0;i<n;i++){
+        len1=expandAroundCenter(s,i,i);
+        len2=expandAroundCenter(s,i,i+1);
+        len=Math.max(len1,len2);
+        console.log(start,end);
+        if (len>end-start) {
+            start=i-Math.floor((len-1)/2);
+            end=i+Math.floor(len/2);
+        }
+    }
+    return s.slice(start,end+1);
+};
+
+var expandAroundCenter=function(s,left,right){
+    while(left>=0 && right<s.length && s[left]===s[right]){
+        left--;
+        right++;
+    }
+    return right-left-1;
+}
+
+
+let str1 = "cbbd";
+let result=longestPalindrome(str1);
+console.log(result);
+```
+
+
+
+
+
+
 
 ## 6.Z 字形变换
 
@@ -618,6 +687,54 @@ let result=isMatch(str1,str2);
 console.log(result);
 
 ```
+
+## 11.盛最多水的容器
+
+给定一个长度为 n 的整数数组 height 。有 n 条垂线，第 i 条线的两个端点是 (i, 0) 和 (i, height[i]) 。
+
+找出其中的两条线，使得它们与 x 轴共同构成的容器可以容纳最多的水。
+
+返回容器可以储存的最大水量。
+
+说明：你不能倾斜容器。
+
+提示：
+
+n == height.length
+2 <= n <= 105
+0 <= height[i] <= 104
+
+```js
+/**
+ * @param {number[]} height
+ * @return {number}
+ */
+ //暴力超时
+var maxArea = function(height) {
+    let n=height.length;
+    const container=[];
+    let min;
+    let maxContainer=0;
+    let area=0;
+    for (let i=0;i<n-1;i++){
+        for(let j=1;j<n;j++){
+            area=(j-i)*Math.min(height[i],height[j]);
+            maxContainer=area>maxContainer ? area : maxContainer;
+        }
+    }
+    return maxContainer;
+};
+
+let height=[1,8,6,2,5,4,8,3,7];
+let result=maxArea(height);
+console.log(result);
+```
+
+
+
+
+
+
 
 ## 13. 罗马数字转整数
 
