--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -8888,6 +8888,52 @@ const bitCount = (x) => {
 
 ```
 
+## 796.旋转字符串
+
+给定两个字符串, s 和 goal。如果在若干次旋转操作之后，s 能变成 goal ，那么返回 true 。
+
+s 的 旋转操作 就是将 s 最左边的字符移动到最右边。 
+
+例如, 若 s = 'abcde'，在旋转一次之后结果就是'bcdea' 。
+
+```js
+/**
+ * @param {string} s
+ * @param {string} goal
+ * @return {boolean}
+ */
+var rotateString = function(s, goal) {
+    if (s.length!==goal.length) {
+        return false;
+    }
+    let index0=0;
+    while(index0<s.length){
+        index0=s.indexOf(goal[0],index0);
+        if (index0===-1) {
+            return false;
+        }else{
+            if (s.slice(index0)+s.slice(0,index0)===goal) {
+                return true;
+            }else{
+                index0++;
+            }
+        }
+    }
+    return false;
+};
+
+let  s = "abcde", goal = "cdeab";
+let result=rotateString(s,goal);
+console.log(result);
+```
+
+```js
+var rotateString = function(s, goal) {
+    return s.length === goal.length && (s + s).indexOf(goal) !== -1;
+};
+
+```
+
 
 
 ## 798. 得分最高的最小轮调
