--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7263,6 +7263,49 @@ const isDigit = (ch) => {
 
 ```
 
+## 429.N 叉树的层序遍历
+
+给定一个 N 叉树，返回其节点值的层序遍历。（即从左到右，逐层遍历）。
+
+树的序列化输入是用层序遍历，每组子节点都由 null 值分隔（参见示例）。
+
+```js
+/**
+ * // Definition for a Node.
+ * function Node(val,children) {
+ *    this.val = val;
+ *    this.children = children;
+ * };
+ */
+
+/**
+ * @param {Node|null} root
+ * @return {number[][]}
+ */
+var levelOrder = function(root) {
+    if (root===null) {
+        return [];
+    }
+    let ans=[[root.val]];
+    let arr=root.children;
+    let len;
+    while(arr.length>0){
+        len=arr.length;
+        let temp=[];
+        while(len>0){
+            len--;
+            let node=arr.shift();
+            temp.push(node.val);
+            if (node.children) {
+                arr=arr.concat(node.children);
+            }
+        }
+        ans.push(temp);
+    }
+    return ans;
+};
+```
+
 
 
 ## 432. 全 O(1) 的数据结构
