--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -8931,6 +8931,55 @@ const bitCount = (x) => {
 
 ```
 
+## 780.到达终点
+
+给定四个整数 sx , sy ，tx 和 ty，如果通过一系列的转换可以从起点 (sx, sy) 到达终点 (tx, ty)，则返回 true，否则返回 false。
+
+从点 (x, y) 可以转换到 (x, x+y)  或者 (x+y, y)。
+
+
+提示:
+
+1 <= sx, sy, tx, ty <= 109
+
+![到达终点(反向计算)](E:\pogject\学习笔记\image\leetcode\到达终点(反向计算).png)
+
+```js
+/**
+ * @param {number} sx
+ * @param {number} sy
+ * @param {number} tx
+ * @param {number} ty
+ * @return {boolean}
+ */
+var reachingPoints = function(sx, sy, tx, ty) {
+    while(tx>sx && ty>sy && tx!==ty){
+        if (tx>ty) {
+            tx%=ty;
+        }else{
+            ty%=tx;
+        }
+    }
+    if (tx===sx && ty===sy) {
+        return true;
+    }else if(tx===sx){
+        return ty>sy && (ty-sy)%tx===0;
+    }else if(ty===sy){
+        return tx>sx && (tx-sx)%sy===0;
+    }else{
+        return false;
+    }
+    
+};
+
+let sx = 1, sy = 1, tx = 3, ty = 5;
+let result=reachingPoints(sx, sy, tx, ty);
+console.log(result);
+
+```
+
+
+
 ## 796.旋转字符串
 
 给定两个字符串, s 和 goal。如果在若干次旋转操作之后，s 能变成 goal ，那么返回 true 。
