--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6193,6 +6193,70 @@ var intersect = function(nums1, nums2) {
 };
 ```
 
+## 357. 统计各位数字都不同的数字个数
+
+给你一个整数 n ，统计并返回各位数字都不同的数字 x 的个数，其中 0 <= x < 10n 。
+
+提示：
+
+0 <= n <= 8
+
+暴力超时
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var countNumbersWithUniqueDigits = function(n) {
+    let maxValue=Math.pow(10,n);
+    let ans=0;
+    let s;
+    for (let i=0;i<maxValue;i++){
+        i=""+i;
+        s=new Set([...i]);
+        if (i.length===s.size) {
+            ans++;
+        }
+    }
+    return ans;
+};
+
+let n=5;
+let result=countNumbersWithUniqueDigits(n);
+console.log(result);
+```
+
+排列组合
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var countNumbersWithUniqueDigits = function(n) {
+    if (n===0) {
+        return 1;
+    }
+    if (n===1) {
+        return 10;
+    }
+    let ans=10,cur=9;
+    for (let i=0;i<n-1;i++){
+        cur*=9-i;
+        ans+=cur;
+    }
+
+    
+    return ans;
+};
+let n=5;
+let result=countNumbersWithUniqueDigits(n);
+console.log(result);
+```
+
+
+
 ## 367. 有效的完全平方数
 
 给定一个 正整数 num ，编写一个函数，如果 num 是一个完全平方数，则返回 true ，否则返回 false 。
