--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -9148,6 +9148,47 @@ let result=uniqueMorseRepresentations(words);
 console.log(result);
 ```
 
+## 806.写字符串需要的行数
+
+我们要把给定的字符串 S 从左到右写到每一行上，每一行的最大宽度为100个单位，如果我们在写某个字母的时候会使这行超过了100 个单位，那么我们应该把这个字母写到下一行。我们给定了一个数组 widths ，这个数组 widths[0] 代表 'a' 需要的单位， widths[1] 代表 'b' 需要的单位，...， widths[25] 代表 'z' 需要的单位。
+
+现在回答两个问题：至少多少行能放下S，以及最后一行使用的宽度是多少个单位？将你的答案作为长度为2的整数列表返回。
+
+注:
+
+字符串 S 的长度在 [1, 1000] 的范围。
+S 只包含小写字母。
+widths 是长度为 26的数组。
+widths[i] 值的范围在 [2, 10]。
+
+```js
+/**
+ * @param {number[]} widths
+ * @param {string} s
+ * @return {number[]}
+ */
+var numberOfLines = function(widths, s) {
+    let index;
+    let sum=0;
+    let line=0;
+    for (let c of s){
+        index=c.charCodeAt()-"a".charCodeAt();
+        if (sum+widths[index]>100) {
+            line++;
+            sum=0;
+        }
+        sum+=widths[index];
+    }
+    line++;
+    return [line,sum];
+};
+
+let widths = [10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10,10];
+let s = "abcdefghijklmnopqrstuvwxyz";
+let result=numberOfLines(widths,s);
+console.log(result);
+```
+
 
 
 ## 825. 适龄的朋友
