--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6446,6 +6446,54 @@ let result=guessNumber(test);
 console.log(result);
 ```
 
+380. O(1) 时间插入、删除和获取随机元素
+
+实现RandomizedSet 类：
+
+RandomizedSet() 初始化 RandomizedSet 对象
+bool insert(int val) 当元素 val 不存在时，向集合中插入该项，并返回 true ；否则，返回 false 。
+bool remove(int val) 当元素 val 存在时，从集合中移除该项，并返回 true ；否则，返回 false 。
+int getRandom() 随机返回现有集合中的一项（测试用例保证调用此方法时集合中至少存在一个元素）。每个元素应该有 相同的概率 被返回。
+你必须实现类的所有函数，并满足每个函数的 平均 时间复杂度为 O(1) 。
+
+```js
+var RandomizedSet = function() {
+    this.nums = [];
+    this.indices = new Map();
+};
+
+RandomizedSet.prototype.insert = function(val) {
+    if (this.indices.has(val)) {
+        return false;
+    }
+    let index = this.nums.length;
+    this.nums.push(val);
+    this.indices.set(val, index);
+    return true;
+};
+
+RandomizedSet.prototype.remove = function(val) {
+    if (!this.indices.has(val)) {
+        return false;
+    }
+    let id = this.indices.get(val);
+    this.nums[id] = this.nums[this.nums.length - 1];
+    this.indices.set(this.nums[id], id);
+    this.nums.pop();
+    this.indices.delete(val);
+    return true;
+};
+
+RandomizedSet.prototype.getRandom = function() {
+    const randomIndex = Math.floor(Math.random() * this.nums.length);
+    return this.nums[randomIndex];
+};
+
+
+```
+
+
+
 ## 383. 赎金信
 
 给你两个字符串：ransomNote 和 magazine ，判断 ransomNote 能不能由 magazine 里面的字符构成。
