--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10959,8 +10959,26 @@ n == accounts[i].length
 1 <= m, n <= 50
 1 <= accounts[i][j] <= 100
 
-```
+```js
+/**
+ * @param {number[][]} accounts
+ * @return {number}
+ */
+var maximumWealth = function(accounts) {
+    let ans=0;
+    for (let i=0;i<accounts.length;i++){
+        let sum=0;
+        accounts[i].forEach((item)=>{
+            sum+=item;
+        });
+        ans=sum>ans ? sum : ans;
+    }
+    return ans;
+};
 
+let test= [[1,2,3],[3,2,1]];
+let result=maximumWealth(test);
+console.log(result);
 ```
 
 
