--- a/微信小程序/小程序开发指南.md
+++ b/微信小程序/小程序开发指南.md
@@ -49,11 +49,33 @@
  点击“开发者工具”工具栏上的预览按钮，使用微信扫描生成的二维码，就可以看到这个小程序在手机端上的表现了。
 
 ```
-AppID(小程序ID)wx11e32ed6816ace7f	
-AppSecret(小程序密钥)73ed709e1ba85fa633308ad533748b5f
+AppID(小程序ID)  wx11
+AppSecret(小程序密钥)   73ed7b5f
 ```
 
+实时显示时间
+
+```html
+<view>
+    <text> {{nowtime}} </text>
+  </view>
+ 
+```
+
+```js
+onShow: function () {
+    var _this=this;
+    var timer=setInterval(function(){
+      _this.setData({nowtime:(new Date()).toLocaleTimeString()});
+    },1000);
+  },
+```
+
+
+
 # 小程序代码组成
+
+
 
 小程序由配置代码JSON文件、模板代码 WXML 文件、样式代码 WXSS文件以及逻辑代码 JavaScript文件组成。
 
@@ -2039,3 +2061,384 @@ item3的最终宽度为：110 + (160 * 0.2) = 142px
 
 ## 界面常见的交互反馈
 
+用户和小程序上进行交互的时候，某些操作可能比较耗时，我们应该予以及时的反馈以舒缓用户等待的不良情绪。
+
+### 触摸反馈
+
+通常页面会摆放一些button按钮或者view区域，用户触摸按钮之后会触发下一步的操作。这种情况下，我们要对触摸这个行为给予用户一些响应。
+
+小程序的view容器组件和button组件提供了hover-class属性，触摸时会往该组件加上对应的class改变组件的样式。
+
+通过hover-class属性改变触摸时的样式
+
+```css
+/*page.wxss */
+.hover{
+  background-color: gray;
+}
+```
+
+```html
+<!--page.wxml -->
+<button hover-class="hover">点击button</button>
+<view hover-class="hover">点击view</view>
+```
+
+对于用户的操作及时响应是非常优秀的体验，有时候在点击button按钮处理更耗时的操作时，我们也会使用button组件的loading属性，在按钮的文字前边出现一个Loading，让用户明确的感觉到，这个操作会比较耗时，需要等待一小段时间。
+
+设置button的loading属性
+
+```html
+<!--page.wxml -->
+<button loading="{{loading}}" bindtap="tap">操作</button>
+```
+
+```js
+//page.js
+Page({
+  data: { loading: false },
+    tap: function(event) {
+        var _this=this;
+        // 把按钮的loading状态显示出来
+        this.setData({loading:true});
+        //接着做耗时的操作
+        setTimeout(()=>{
+          _this.setData({loading:false});
+        },5000);
+      },
+})   
+```
+
+### Toast和模态对话框
+
+在完成某个操作成功之后，我们希望告诉用户这次操作成功并且不打断用户接下来的操作。弹出式提示Toast就是用在这样的场景上，Toast提示默认1.5秒后自动消失
+
+**小程序提供了显示隐藏Toast的接口**，代码示例如下所示。
+
+显示/隐藏Toast
+
+```js
+/**
+   * 生命周期函数--监听页面加载
+   */
+  onLoad: function (options) {
+    wx.showToast({
+      title: '已发送',
+      icon:"success",
+      duration:1500,
+    });
+    // wx.hideToast() // 隐藏Toast
+  },
+```
+
+特别要注意，我们不应该把Toast用于错误提示，因为错误提示需要明确告知用户具体原因，因此不适合用这种一闪而过的Toast弹出式提示。**一般需要用户明确知晓操作结果状态的话，会使用模态对话框来提示，同时附带下一步操作的指引**。
+
+显示模态对话框
+
+```js
+onLoad: function (options) {
+    wx.showModal({
+      title:"标题",
+      content:"告知当前状态，信息和解决方法",
+      confirmText:"主操作",
+      cancelText:"次要操作",
+      confirmColor:"green",
+      cancelColor: 'red',
+      success:function(res){
+        if(res.confirm){
+          console.log("用户点击主操作");
+        }else if(res.cancel){
+          console.log("用户点击次要操作");
+        }
+      }
+    });
+  },
+```
+
+### 界面滚动
+
+往往手机屏幕是承载不了所有信息的，所以内容区域肯定会超出屏幕区域，用户可以通过滑动屏幕来查看下一屏的内容，这是非常常见的界面滚动的交互。
+
+为了让用户可以快速刷新当前界面的信息，一般在小程序里会通过下拉整个界面这个操作来触发
+
+宿主环境提供了统一的下拉刷新交互，开发者只需要通过配置开启当前页面的下拉刷新，用户往下拉动界面触发下拉刷新操作时，Page构造器的onPullDownRefresh回调会被触发，此时开发者重新拉取新数据进行渲染，实例代码如下所示。
+
+页面下拉刷新
+
+```js
+ //page.json
+{"enablePullDownRefresh": true }
+
+//page.js
+ onPullDownRefresh: function () {
+    // 用户触发了下拉刷新操作
+
+    // 拉取新数据重新渲染界面
+    console.log("下拉");
+    // wx.stopPullDownRefresh() // 可以停止当前页面的下拉刷新。
+  },
+
+```
+
+多数的购物小程序会在首页展示一个商品列表，用户滚动到底部的时候，会加载下一页的商品列表渲染到列表的下方，我们把这个交互操作叫为上拉触底。宿主环境提供了上拉的配置和操作触发的回调，如下代码所示。
+
+页面上拉触底
+
+```js
+//page.json
+// 界面的下方距离页面底部距离小于onReachBottomDistance像素时触发onReachBottom回调
+{"onReachBottomDistance": 100 }
+
+//page.js
+/**
+   * 页面上拉触底事件的处理函数
+   */
+  onReachBottom: function () {
+    // 当界面的下方距离页面底部距离小于100像素时触发回调
+    console.log("上拉触底");
+  },
+
+```
+
+当然我们有些时候并不想整个页面进行滚动，而是页面中某一小块区域需要可滚动，此时就要用到宿主环境所提供的scroll-view可滚动视图组件。可以通过组件的scroll-x和scroll-y属性决定滚动区域是否可以横向或者纵向滚动，scroll-view组件也提供了丰富的滚动回调触发事件，这部分我们就不再展开细节，读者可以通过scroll-view组件的官方文档了解到细节[[1\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000224fc9d0f98cb0086f4eff5180a#_ftn1)。
+
+## 发起HTTPS网络通信
+
+小程序经常需要往服务器传递数据或者从服务器拉取信息，这个时候可以使用wx.request这个API，在这一节我们会重点讨论wx.request的使用和注意事项。为了叙述方便，假设我们的服务器域名是test.com。
+
+### wx.request接口
+
+如果我们需要从 https://test.com/getinfo 接口拉取用户信息，其代码示例如下所示，详细参数如表4-1所示。
+
+wx.request调用示例
+
+```javascript
+wx.request({
+  url: 'https://test.com/getinfo',
+  success: function(res) {
+    console.log(res)// 服务器回包信息
+  }
+})
+```
+
+ wx.request详细参数
+
+| **参数名** | **类型**      | **必填** | **默认值** | **描述**                                                     |
+| :--------- | :------------ | :------- | :--------- | :----------------------------------------------------------- |
+| url        | String        | 是       |            | 开发者服务器接口地址                                         |
+| data       | Object/String | 否       |            | 请求的参数                                                   |
+| header     | Object        | 否       |            | 设置请求的 header，header 中不能设置 Referer，默认header['content-type'] = 'application/json' |
+| method     | String        | 否       | GET        | （需大写）有效值：OPTIONS, GET, HEAD, POST, PUT, DELETE, TRACE, CONNECT |
+| dataType   | String        | 否       | json       | 回包的内容格式，如果设为json，会尝试对返回的数据做一次 JSON解析 |
+| success    | Function      | 否       |            | 收到开发者服务成功返回的回调函数，其参数是一个Object，见表4-2。 |
+| fail       | Function      | 否       |            | 接口调用失败的回调函数                                       |
+| complete   | Function      | 否       |            | 接口调用结束的回调函数（调用成功、失败都会执行）             |
+
+### 服务器接口
+
+url参数是当前发起请求的服务器接口地址，小程序宿主环境要求request发起的网络请求必须是https协议请求，因此开发者服务器必须提供HTTPS服务的接口，同时为了保证小程序不乱用任意域名的服务，wx.request请求的域名需要在小程序管理平台进行配置[[2\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000ee27c9c8d98ab0086788fa5b00a#_ftn2)，如果小程序正式版使用wx.request请求未配置的域名，在控制台会有相应的报错。
+
+一般我们在开发阶段时，处于开发阶段的服务器接口还没部署到现网的域名下，经常会通过另一个域名来进行开发调试，考虑到这一点，为了方便开发者进行开发调试，开发者工具、小程序的开发版和小程序的体验版在某些情况下[[3\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000ee27c9c8d98ab0086788fa5b00a#_ftn3)允许wx.request请求任意域名。
+
+由于我们一直在迭代更新小程序，那么就会有一个问题：在新版小程序发布时的某段时间内，会有部分用户使用旧版本的小程序[[4\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000ee27c9c8d98ab0086788fa5b00a#_ftn4)。如果接口需要支持新的特性需要修改返回的数据格式，那接口的参数和返回字段至少向前兼容一个版本。举个例子，假设前边的https://test.com/getinfo接口返回的JSON数据为：{ "username": "zhangsan","sex": "man" }，在新版本中，我们需要把sex字段的值改成用0, 1来表示性别男女。为了保持接口向前兼容，我们不应该直接改sex字段值的类型，而是返回的JSON数据中再定义多一个字段sexNumber，这样旧版本通过这个接口拿到的数据格式依旧是能够正常工作的。
+
+### 请求参数
+
+通过wx.request这个API，有两种方法把数据传递到服务器：通过url上的参数以及通过data参数。举个例子：我们需要向服务器拿id为1的用户的信息，同时我们把当前小程序的版本带给服务器，让服务器可以做新旧版逻辑兼容，两种方法的代码示例如代码所示。
+
+wx.request调用示例
+
+```js
+// 通过url参数传递数据
+wx.request({
+  url:'https://test.com/getinfo?id=1&version=1.0.0',
+  success: function(res) {
+    console.log(res)// 服务器回包信息
+  }
+})
+   // 通过data参数传递数据
+wx.request({
+  url: 'https://test.com/getinfo',
+     data: { id:1, version:'1.0.0' },
+  success: function(res) {
+    console.log(res)// 服务器回包信息
+  }
+})
+```
+
+两种实现方式在HTTP GET请求的情况下表现几乎是一样的，需要留意的是url是有长度限制的，其最大长度是1024字节，同时url上的参数需要拼接到字符串里，参数的值还需要做一次urlEncode。向服务端发送的数据超过1024字节时，就要采用HTTPPOST的形式，此时传递的数据就必须要使用data参数，**基于这个情况，一般建议需要传递数据时，使用data参数来传递**。
+
+我们再来单独看看POST请求的情况，并不是所有请求都是按照键值对key=value的形式传递到后台服务器，有时候需要传一些比较复杂的数据结构到后台的时候，用JSON格式会更加合适。此时我们可以在wx.request的header参数设置content-type头部为application/json，小程序发起的请求的包体内容就是data参数对应的JSON字符串，代码示例如下。
+
+wx.request发起POST请求包体使用json格式
+
+```javascript
+// 请求的包体为 {"a":{"b":[1,2,3],"c":{"d":"test"}}}
+wx.request({
+  url: 'https://test.com/postdata',
+  method: 'POST',
+  header: { 'content-type': 'application/json'},
+  data: {
+    a: {
+      b: [1, 2, 3],
+      c: { d: "test" }
+    }
+  },
+  success: function(res) {
+    console.log(res)// 服务器回包信息
+  }
+})
+```
+
+### 收到回包
+
+通过wx.request发送请求后，服务器处理请求并返回HTTP包，小程序端收到回包后会触发success回调，同时回调会带上一个Object信息
+
+wx.request的success返回参数
+
+| **参数名** | **类型**      | **描述**                                |
+| :--------- | :------------ | :-------------------------------------- |
+| data       | Object/String | 开发者服务器返回的数据                  |
+| statusCode | Number        | 开发者服务器返回的 HTTP 状态码          |
+| header     | Object        | 开发者服务器返回的 HTTP Response Header |
+
+尤其注意，只要成功收到服务器返回，无论HTTP状态码是多少都会进入success回调。**因此开发者自己通过对回包的返回码进行判断后再执行后续的业务逻辑。**
+
+success回调的参数data字段类型是根据header['content-type']决定的，默认header['content-type']是'application/json'，在触发success回调前，小程序宿主环境会对data字段的值做JSON解析，如果解析成功，那么data字段的值会被设置成解析后的Object对象，其他情况data字段都是String类型，其值为HTTP回包包体。
+
+### 一般使用技巧
+
+#### 1. 设置超时时间
+
+小程序发出一个HTTPS网络请求，有时网络存在一些异常或者服务器存在问题，在经过一段时间后仍然没有收到网络回包，我们把这一段等待的最长时间称为请求超时时间。
+
+小程序request默认超时时间是60秒，一般来说，我们不需要这么长的一个等待时间才收到回包，可能在等待3秒后还没收到回包就需要给用户一个明确的服务不可用的提示。在小程序项目根目录里边的app.json可以指定request的超时时间。
+
+ app.json指定wx.requset超时时间为3000毫秒
+
+```javascript
+{
+  "networkTimeout": {
+    "request": 3000
+  }
+}
+```
+
+#### 2. 请求前后的状态处理
+
+大部分场景可能是这样的，用户点击一个按钮，界面出现“加载中...”的Loading界面，然后发送一个请求到后台，后台返回成功直接进入下一个业务逻辑处理，后台返回失败或者网络异常等情况则显示一个“系统错误”的Toast，同时一开始的Loading界面会消失。我们给出一个常见的wx.request的示例代码，如下所示。
+
+wx.request常见的示例代码
+
+```javascript
+var hasClick = false;
+Page({
+  tap: function() {
+    if (hasClick) {
+      return
+    }
+    hasClick = true
+    wx.showLoading()
+    wx.request({
+      url: 'https://test.com/getinfo',
+      method: 'POST',
+      header: { 'content-type':'application/json' },
+      data: { },
+      success: function (res) {
+        if (res.statusCode === 200) {
+          console.log(res.data)// 服务器回包内容
+        }
+      },
+      fail: function (res) {
+        wx.showToast({ title: '系统错误' })
+      },
+      complete: function (res) {
+        wx.hideLoading()
+        hasClick = false
+      }
+    })
+  }
+})
+```
+
+为了防止用户极快速度触发两次tap回调，我们还加了一个hasClick的“锁”，在开始请求前检查是否已经发起过请求，如果没有才发起这次请求，等到请求返回之后再把锁的状态恢复回去。
+
+### 排查异常的方法
+
+在使用wx.request接口我们会经常遇到无法发起请求或者服务器无法收到请求的情况，我们罗列排查这个问题的一般方法：
+
+1. 检查手机网络状态以及wifi连接点是否工作正常。
+2. 检查小程序是否为开发版或者体验版，因为开发版和体验版的小程序不会校验域名。
+3. 检查对应请求的HTTPS证书是否有效，同时TLS的版本必须支持1.2及以上版本，可以在开发者工具的console面板输入showRequestInfo()查看相关信息。
+4. 域名不要使用IP地址或者localhost，并且不能带端口号，同时域名需要经过ICP备案。
+5. 检查app.json配置的超时时间配置是否太短，超时时间太短会导致还没收到回报就触发fail回调。
+6. 检查发出去的请求是否302到其他域名的接口，这种302的情况会被视为请求别的域名接口导致无法发起请求。
+
+## 微信登录
+
+已有的互联网产品在接入小程序会面临一些和登录态相关的问题：怎么获取微信登录态；怎么把微信帐号和自己的帐号进行打通。在这一节中，我们来介绍一下如何把微信登录应用到你的小程序中。
+
+我们先来看看微信登录的整个过程
+
+![微信登录过程](E:\pogject\学习笔记\image\js\微信登录过程.png)
+
+### 获取微信登录凭证code
+
+首先说到登录，我们可能很正常地想到一个做法：通过wx.login直接拿到微信用户的id编号[[5\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000cc48f96c5989b0086ddc7e56c0a#_ftn5)，再把这个id传到自己的后台，从而知道是哪个微信用户在使用我的服务。而我们上述微信登录的流程中并不是通过wx.login直接获取微信用户的id，那直接获取微信用户id的做法有什么问题呢？ 假设现在我们有个接口，通过wx.request请求 https://test.com/getUserInfo?id=1 拉取到微信用户id为1在我们业务侧的个人信息，那么黑客就可以通过遍历所有的id，把整个业务侧的个人信息数据全部拉走，如果我们还有其他接口也是依赖这样的方式去实现的话，那黑客就可以伪装成任意身份来操作任意账户下的数据，想想这给业务带来多大的安全风险。
+
+为了避免这样的风险，wx.login是生成一个带有时效性的凭证，就像是一个会过期的临时身份证一样，在wx.login调用时，会先在微信后台生成一张临时的身份证，其有效时间仅为5分钟[[6\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000cc48f96c5989b0086ddc7e56c0a#_ftn6)。然后把这个临时身份证返回给小程序方，这个临时的身份证我们把它称为**微信登录凭证code**。如果5分钟内小程序的后台不拿着这个临时身份证来微信后台服务器换取微信用户id的话，那么这个身份证就会被作废，需要再调用wx.login重新生成登录凭证。
+
+由于这个临时身份证5分钟后会过期，如果黑客要冒充一个用户的话，那他就必须在5分钟内穷举所有的身份证id，然后去开发者服务器换取真实的用户身份。显然，黑客要付出非常大的成本才能获取到一个用户信息，同时，开发者服务器也可以通过一些技术手段检测到5分钟内频繁从某个ip发送过来的登录请求，从而拒绝掉这些请求。
+
+### 发送code到开发者服务器
+
+在wx.login的success回调中拿到微信登录凭证，紧接着会通过wx.request把code传到开发者服务器，为了后续可以换取微信用户身份id。如果当前微信用户还没有绑定当前小程序业务的用户身份，那在这次请求应该顺便把用户输入的帐号密码[[7\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000cc48f96c5989b0086ddc7e56c0a#_ftn7)一起传到后台，然后开发者服务器就可以校验账号密码之后再和微信用户id进行绑定，小程序端的示例代码如下所示。
+
+wx.login获取code后
+
+```javascript
+Page({
+  tapLogin: function() {
+    wx.login({
+      success: function(res) {
+        if (res.code) {
+          wx.request({
+            url: 'https://test.com/login',
+            data: {
+              username: 'zhangsan', // 用户输入的账号
+              password: 'pwd123456', // 用户输入的密码
+              code: res.code
+            },
+            success: function(res) {
+              // 登录成功
+              if (res.statusCode === 200) {
+               console.log(res.data.sessionId)// 服务器回包内容
+              }
+            }
+          })
+        } else {
+          console.log('获取用户登录态失败！' + res.errMsg)
+        }
+      }
+    });
+  }
+})
+```
+
+### 到微信服务器换取微信用户身份id
+
+到了第3步，开发者的后台就拿到了前边wx.login()所生成的微信登录凭证code，此时就可以拿这个code到微信服务器换取微信用户身份。微信服务器为了确保拿code过来换取身份信息的人就是刚刚对应的小程序开发者，到微信服务器的请求要同时带上AppId和AppSecret，这两个信息在小程序管理平台的开发设置界面[[8\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000cc48f96c5989b0086ddc7e56c0a#_ftn8)可以看到，由此可以看出，AppId和AppSecret是微信鉴别开发者身份的重要信息，AppId是公开信息，泄露AppId不会带来安全风险，但是AppSecret是开发者的隐私数据不应该泄露，如果发现泄露需要到小程序管理平台进行重置AppSecret，而code在成功换取一次信息之后也会立即失效，即便凭证code生成时间还没过期。
+
+开发者服务器和微信服务器通信也是通过HTTPS协议，微信服务器提供的接口地址是：
+
+https://api.weixin.qq.com/sns/jscode2session?appid=%3CAppId%3E&secret=%3CAppSecret%3E&js_code=%3Ccode%3E&grant_type=authorization_code
+
+URL的query部分的参数中 <AppId>, <AppSecret>, <code> 就是前文所提到的三个信息，请求参数合法的话，接口会返回以下字段。
+
+ jscode2session接口返回字段
+
+| **字段**    | **描述**                                                     |
+| :---------- | :----------------------------------------------------------- |
+| openid      | 微信用户的唯一标识                                           |
+| session_key | 会话密钥                                                     |
+| unionid     | 用户在微信开放平台的唯一标识符。本字段在满足一定条件的情况下才返回。 |
