--- a/微信小程序/小程序开发指南.md
+++ b/微信小程序/小程序开发指南.md
@@ -73,6 +73,166 @@ onShow: function () {
 
 
 
+# 小程序配置
+
+## 全局配置
+
+小程序根目录下的 `app.json` 文件用来对微信小程序进行全局配置，决定页面文件的路径、窗口表现、设置网络超时时间、设置多 tab 等。
+
+完整配置项说明请参考[小程序全局配置](https://developers.weixin.qq.com/miniprogram/dev/reference/configuration/app.html)
+
+以下是一个包含了部分常用配置选项的 `app.json` ：
+
+```json
+{
+  "pages": [
+    "pages/index/index",
+    "pages/logs/index"
+  ],
+  "window": {
+    "navigationBarTitleText": "Demo"
+  },
+  "tabBar": {
+    "list": [{
+      "pagePath": "pages/index/index",
+      "text": "首页"
+    }, {
+      "pagePath": "pages/logs/index",
+      "text": "日志"
+    }]
+  },
+  "networkTimeout": {
+    "request": 10000,
+    "downloadFile": 10000
+  },
+  "debug": true
+}
+```
+
+## 页面配置
+
+每一个小程序页面也可以使用同名 `.json` 文件来对本页面的窗口表现进行配置，页面中配置项会覆盖 `app.json` 的 `window` 中相同的配置项。
+
+例如：
+
+```json
+{
+  "navigationBarBackgroundColor": "#ffffff",
+  "navigationBarTextStyle": "black",
+  "navigationBarTitleText": "微信接口功能演示",
+  "backgroundColor": "#eeeeee",
+  "backgroundTextStyle": "light"
+}
+```
+
+微信现已开放小程序内搜索，开发者可以通过 `sitemap.json` 配置，或者管理后台页面收录开关来配置其小程序页面是否允许微信索引。当开发者允许微信索引时，微信会通过爬虫的形式，为小程序的页面内容建立索引。当用户的搜索词条触发该索引时，小程序的页面将可能展示在搜索结果中。 爬虫访问小程序内页面时，会携带特定的 user-agent：`mpcrawler` 及[场景值](https://developers.weixin.qq.com/miniprogram/dev/reference/scene-list.html)：`1129`。需要注意的是，若小程序爬虫发现的页面数据和真实用户的呈现不一致，那么该页面将不会进入索引中。
+
+具体配置说明
+
+1. 页面收录设置：可对整个小程序的索引进行关闭，小程序管理后台-功能-页面内容接入-页面收录开关；[详情](https://mp.weixin.qq.com/wxopen/readtemplate?t=config/collection_agreement_tmpl)
+2. sitemap 配置：可对特定页面的索引进行关闭
+
+## sitemap 配置
+
+小程序根目录下的 `sitemap.json` 文件用来配置小程序及其页面是否允许被微信索引。
+
+完整配置项说明请参考[小程序 sitemap 配置](https://developers.weixin.qq.com/miniprogram/dev/reference/configuration/sitemap.html)
+
+所有页面都会被微信索引（默认情况）
+
+```json
+{
+  "rules":[{
+    "action": "allow",
+    "page": "*"
+  }]
+}
+
+```
+
+配置 `path/to/page` 页面不被索引，其余页面允许被索引
+
+```json
+{
+  "rules":[{
+    "action": "disallow",
+    "page": "path/to/page"
+  }]
+}
+```
+
+配置 `path/to/page` 页面被索引，其余页面不被索引
+
+```json
+{
+  "rules":[{
+    "action": "allow",
+    "page": "path/to/page"
+  }, {
+    "action": "disallow",
+    "page": "*"
+  }]
+}
+```
+
+包含 `a 和 b` 参数的 `path/to/page` 页面会被微信优先索引，其他页面都会被索引，例如：
+
+- `path/to/page?a=1&b=2` => 优先被索引
+- `path/to/page?a=1&b=2&c=3` => 优先被索引
+- `path/to/page` => 被索引
+- `path/to/page?a=1` => 被索引
+- 其他页面都会被索引
+
+```json
+{
+  "rules":[{
+    "action": "allow",
+    "page": "path/to/page",
+    "params": ["a", "b"],
+    "matching": "inclusive"
+  }, {
+    "action": "allow",
+    "page": "*"
+  }]
+}
+```
+
+- `path/to/page?a=1&b=2` => 优先被索引
+- `path/to/page?a=1&b=2&c=3` => 优先被索引
+- `path/to/page` => 不被索引
+- `path/to/page?a=1` => 不被索引
+- 其他页面由于命中第二条规则，所以不会被索引
+- 由于优先级的问题，第三条规则是没有意义的
+
+**注：没有 sitemap.json 则默认所有页面都能被索引**
+
+**注：`{"action": "allow", "page": "\*"}` 是优先级最低的默认规则，未显式指明 "disallow" 的都默认被索引**
+
+```json
+{
+  "rules":[{
+    "action": "allow",
+    "page": "path/to/page",
+    "params": ["a", "b"],
+    "matching": "inclusive"
+  }, {
+    "action": "disallow",
+    "page": "*"
+  }, {
+    "action": "allow",
+    "page": "*"
+  }]
+}
+```
+
+## 如何调试
+
+当在小程序项目中设置了 `sitemap` 的配置文件（默认为 `sitemap.json`）时,便可在开发者工具控制台上显示当前页面是否被索引的调试信息（ 最新版本的开发者工具支持索引提示）
+
+**注：`sitemap` 的索引提示是默认开启的，如需要关闭 `sitemap` 的索引提示，可在小程序项目配置文件 `project.config.json` 的 `setting` 中配置字段 `checkSiteMap` 为 `false`**
+
+**注: `sitemap` 文件内容最大为 5120 个 UTF8 字符**
+
 # 小程序代码组成
 
 
@@ -2388,7 +2548,7 @@ Page({
 
 为了避免这样的风险，wx.login是生成一个带有时效性的凭证，就像是一个会过期的临时身份证一样，在wx.login调用时，会先在微信后台生成一张临时的身份证，其有效时间仅为5分钟[[6\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000cc48f96c5989b0086ddc7e56c0a#_ftn6)。然后把这个临时身份证返回给小程序方，这个临时的身份证我们把它称为**微信登录凭证code**。如果5分钟内小程序的后台不拿着这个临时身份证来微信后台服务器换取微信用户id的话，那么这个身份证就会被作废，需要再调用wx.login重新生成登录凭证。
 
-由于这个临时身份证5分钟后会过期，如果黑客要冒充一个用户的话，那他就必须在5分钟内穷举所有的身份证id，然后去开发者服务器换取真实的用户身份。显然，黑客要付出非常大的成本才能获取到一个用户信息，同时，开发者服务器也可以通过一些技术手段检测到5分钟内频繁从某个ip发送过来的登录请求，从而拒绝掉这些请求。
+由于这个临时身份证5分钟后会过期，如果黑客要冒充一个用户的话，那他就必须在5分钟内穷举所有的身份证id，然后去开发者服务器换取真实的用户身份。显然，黑客要付出非常大的成本才能获取到一个用户信息，同时，**开发者服务器也可以通过一些技术手段检测到5分钟内频繁从某个ip发送过来的登录请求，从而拒绝掉这些请求。**
 
 ### 发送code到开发者服务器
 
@@ -2427,7 +2587,7 @@ Page({
 
 ### 到微信服务器换取微信用户身份id
 
-到了第3步，开发者的后台就拿到了前边wx.login()所生成的微信登录凭证code，此时就可以拿这个code到微信服务器换取微信用户身份。微信服务器为了确保拿code过来换取身份信息的人就是刚刚对应的小程序开发者，到微信服务器的请求要同时带上AppId和AppSecret，这两个信息在小程序管理平台的开发设置界面[[8\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000cc48f96c5989b0086ddc7e56c0a#_ftn8)可以看到，由此可以看出，AppId和AppSecret是微信鉴别开发者身份的重要信息，AppId是公开信息，泄露AppId不会带来安全风险，但是AppSecret是开发者的隐私数据不应该泄露，如果发现泄露需要到小程序管理平台进行重置AppSecret，而code在成功换取一次信息之后也会立即失效，即便凭证code生成时间还没过期。
+到了第3步，开发者的后台就拿到了前边wx.login()所生成的微信登录凭证code，此时就可以拿这个code到微信服务器换取微信用户身份。微信服务器为了确保拿code过来换取身份信息的人就是刚刚对应的小程序开发者，到微信服务器的请求要同时带上AppId和AppSecret，这两个信息在小程序管理平台的开发设置界面[[8\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000cc48f96c5989b0086ddc7e56c0a#_ftn8)可以看到，由此可以看出**，AppId和AppSecret是微信鉴别开发者身份的重要信息**，AppId是公开信息，泄露AppId不会带来安全风险，但是AppSecret是开发者的隐私数据不应该泄露，如果发现泄露需要到小程序管理平台进行重置AppSecret，而code在成功换取一次信息之后也会立即失效，即便凭证code生成时间还没过期。
 
 开发者服务器和微信服务器通信也是通过HTTPS协议，微信服务器提供的接口地址是：
 
@@ -2442,3 +2602,271 @@ URL的query部分的参数中 <AppId>, <AppSecret>, <code> 就是前文所提到
 | openid      | 微信用户的唯一标识                                           |
 | session_key | 会话密钥                                                     |
 | unionid     | 用户在微信开放平台的唯一标识符。本字段在满足一定条件的情况下才返回。 |
+
+我们暂时只要关注前两个字段即可，**openid就是前文一直提到的微信用户id，可以用这个id来区分不同的微信用户**。session_key则是微信服务器给开发者服务器颁发的身份凭证，开发者可以用session_key请求微信服务器其他接口来获取一些其他信息，由此可以看到，**session_key不应该泄露或者下发到小程序前端**。
+
+可能我们会好奇为什么要设计session_key，如果我们每次都通过小程序前端wx.login()生成微信登录凭证code去微信服务器请求信息，步骤太多造成整体耗时比较严重，因此对于一个比较可信的服务端，给开发者服务器颁发一个时效性更长的会话密钥就显得很有必要了。**session_key也存在过期时间**，因为篇幅关系，我们不在此展开，可以参考小程序的官方文档关于session_key的相关介绍。
+
+### 绑定微信用户身份id和业务用户身份
+
+在4.5.2节提到，业务侧用户还没绑定微信侧身份时，会让用户填写业务侧的用户名密码，这两个值会和微信登录凭证一起请求开发者服务器的登录接口，此时开发者后台通过校验用户名密码就拿到了业务侧的用户身份id，通过code到微信服务器获取微信侧的用户身份openid。**微信会建议开发者把这两个信息的对应关系存起来，我们把这个对应关系称之为**“绑定”。
+
+有了这个绑定信息，小程序在下次需要用户登录的时候就可以不需要输入账号密码，因为通过wx.login()获取到code之后，可以拿到用户的微信身份openid，**通过绑定信息就可以查出业务侧的用户身份id，这样静默授权的登录方式显得非常便捷**。
+
+### 业务登录凭证SessionId
+
+4.5.3节已经说到微信侧返回的session_key是开发者服务器和微信服务器的会话密钥，同样道理，开发者服务器和开发者的小程序应该也有会话密钥，在本书中我们就把它称之为SessionId。**用户登录成功之后，开发者服务器需要生成会话密钥SessionId，在服务端保持SessionId对应的用户身份信息，同时把SessionId返回给小程序**。小程序后续发起的请求中携带上SessionId，开发者服务器就可以通过服务器端的Session信息查询到当前登录用户的身份，这样我们就不需要每次都重新获取code，省去了很多通信消耗。我们在4.6.4还会提到如何利用本地数据缓存的能力把SessionId存储起来，以便在它还没过期的时候能重复利用，以提高通信的性能。
+
+
+
+## 本地数据缓存
+
+本地数据缓存是小程序存储在当前设备上硬盘上的数据，**本地数据缓存有非常多的用途**，我们可以利用本地数据缓存来存储用户在小程序上产生的操作，在用户关闭小程序重新打开时可以恢复之前的状态。我们还可以利用本地缓存一些服务端非实时的数据提高小程序获取数据的速度，在特定的场景下可以提高页面的渲染速度，减少用户的等待时间。
+
+### 读写本地数据缓存
+
+小程序提供了读写本地数据缓存的接口，通过wx.getStorage/wx.getStorageSync读取本地缓存，通过wx.setStorage/wx.setStorageSync写数据到缓存，其中Sync后缀的接口表示是同步接口[[9\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000a2c7c9f4a981b0086bd31e5b40a#_ftn9)，执行完毕之后会立马返回，示例代码和参数说明如下所示。
+
+ wx.getStorage/wx.getStorageSync读取本地数据缓存
+
+```js
+    wx.getStorage({
+        // 异步接口在success回调才能拿到返回值
+      key:"age",
+      success:function(res){
+        console.log(res.data);
+      },
+      fail:function(){
+        console.log("获取age失败");
+      }
+    });
+
+    try{
+         // 同步接口立即返回值
+      var name=wx.getStorageSync("name");
+      console.log("name:"+name);
+    }catch(e){
+      console.log("获取name失败");
+    }
+
+```
+
+wx.setStorage/wx.setStorageSync写入本地数据缓存
+
+```javascript
+// 异步接口在success/fail回调才知道写入成功与否
+    wx.setStorage({
+      key:"name",
+      data:"kop",
+      success:function(){
+        console.log("写入name成功");
+      },
+      fail:function(){
+        console.log("写入name失败");
+      },
+    });
+
+    try{
+        // 同步接口立即写入
+      wx.setStorageSync("age",23);
+      console.log("写入age成功");
+    }catch(e){
+      console.log("写入age失败");
+    }
+```
+
+### 缓存限制和隔离
+
+小程序宿主环境会管理不同小程序的数据缓存，不同小程序的本地缓存空间是分开的，每**个小程序的缓存空间上限为10MB**，如果当前缓存已经达到10MB，再通过wx.setStorage写入缓存会触发fail回调。
+
+小程序的本地缓存不仅仅通过小程序这个维度来隔离空间，考虑到同一个设备可以登录不同微信用户，**宿主环境还对不同用户的缓存进行了隔离，避免用户间的数据隐私泄露。**
+
+由于本地缓存是存放在当前设备，用户换设备之后无法从另一个设备读取到当前设备数据，因此**用户的关键信息不建议只存在本地缓存，应该把数据放到服务器端进行持久化存储。**
+
+### 利用本地缓存提前渲染界面
+
+讨论一个需求：我们要实现了一个购物商城的小程序，首页是展示一堆商品的列表。**一般的实现方法就是在页面onLoad回调之后通过wx.request向服务器发起一个请求去拉取首页的商品列表数据**，等待wx.request的success回调之后把数据通过setData渲染到界面上，如下代码所示。
+
+page.js拉取商品列表数据展示在界面上
+
+```js
+Page({
+  onLoad: function() {
+    var that = this
+    wx.request({
+      url: 'https://test.com/getproductlist',
+      success: function (res) {
+        if (res.statusCode === 200) {
+          that.setData({
+            list: res.data.list
+          })
+        }
+      }
+    })
+  }
+})
+```
+
+设想一下当用户退出小程序再进来，界面仍然会有白屏现象，因为我们需要等待拉取商品列表的请求回来才能渲染商品列表。当然我们还可以再做一些体验上的优化，例如在发请求前，可能我们会在界面上显示一个Loading提示用户在加载中，但是并没有解决这个延迟渲染的现象，这个时候我们可以利用本地缓存来提前渲染界面。
+
+我们在拉取商品列表后把列表存在本地缓存里，**在onLoad发起请求前，先检查是否有缓存过列表，如果有的话直接渲染界面**，然后等到wx.request的success回调之后再覆盖本地缓存重新渲染新的列表，如下代码所示。
+
+ page.js利用本地缓存提前渲染界面
+
+```javascript
+Page({
+  onLoad: function() {
+    var that = this
+    var list =wx.getStorageSync("list")
+    if (list) { // 本地如果有缓存列表，提前渲染
+      that.setData({
+        list: list
+      })
+    }
+    wx.request({
+      url: 'https://test.com/getproductlist',
+      success: function (res) {
+        if (res.statusCode === 200) {
+          list = res.data.list
+          that.setData({ // 再次渲染列表
+            list: list
+          })
+          wx.setStorageSync("list",list) // 覆盖缓存数据
+        }
+      }
+    })
+  }
+})
+```
+
+这种做法可以让用户体验你的小程序时感觉加载非常快，但是你还要留意这个做法的缺点，如果小程序对渲染的数据实时性要求非常高的话，用户看到一个旧数据的界面会非常困惑。**因此一般在对数据实时性/一致性要求不高的页面采用这个方法来做提前渲染，用以优化小程序体验。**
+
+### 缓存用户登录态SessionId
+
+在4.4节我们说到处理用户登录态的一般方法，通常用户在没有主动退出登录前，用户的登录态会一直保持一段时间[[10\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000a2c7c9f4a981b0086bd31e5b40a#_ftn10)，就无需用户频繁地输入账号密码。如果我们把SessionId记录在Javascript中某个内存变量，当用户关闭小程序再进来小程序时，之前内存的SessionId已经丢失，此时我们就**需要利用本地缓存的能力来持久化存储SessionId**。
+
+利用本地缓存持久存储用户登录态SessionId
+
+```javascript
+//page.js
+
+var app = getApp()
+Page({
+  onLoad: function() {
+    // 调用wx.login获取微信登录凭证
+    wx.login({
+      success: function(res) {
+        // 拿到微信登录凭证之后去自己服务器换取自己的登录凭证
+        wx.request({
+          url: 'https://test.com/login',
+          data: { code: res.code },
+          success: function(res) {
+            var data = res.data
+            // 把 SessionId 和过期时间放在内存中的全局对象和本地缓存里边
+            app.globalData.sessionId =data.sessionId
+            wx.setStorageSync('SESSIONID',data.sessionId)
+            // 假设登录态保持1天
+            var expiredTime = +new Date() +1*24*60*60*1000
+            app.globalData.expiredTime =expiredTime
+            wx.setStorageSync('EXPIREDTIME',expiredTime)
+          }
+        })
+      }
+    })
+  }
+})
+```
+
+在重新打开小程序的时候，我们把上一次存储的SessionId内容取出来，恢复到内存。
+
+```js
+//app.js
+
+App({
+  onLaunch: function(options) {
+    var sessionId =wx.getStorageSync('SESSIONID')
+    var expiredTime =wx.getStorageSync('EXPIREDTIME')
+    var now = +new Date()
+
+    if (now - expiredTime <=1*24*60*60*1000) {
+      this.globalData.sessionId = sessionId
+      this.globalData.expiredTime = expiredTime
+    }
+  },
+  globalData: {
+    sessionId: null,
+    expiredTime: 0
+  }
+})
+```
+
+## 设备能力
+
+我们知道PC的程序和手机的程序有很大体验不一样的地方，尤其在信息输入这个体验上差别非常大，PC端可以有键盘、鼠标等等外设来辅助用户输入很多复杂的信息，而用户要在一个小小的手机屏幕上输入复杂信息效率是很低的。小程序的宿主环境提供了非常多的操作设备能力来帮助用户在特定场景下做高效的输入，例如：扫码、操控蓝牙等等能力。当然也有很多设备能力不是为了解决输入低效问题而设计的，它们更多的是解决用户侧一些体验问题，例如：获取设备网络状态；调整屏幕亮度等等，我们在这一章节中来介绍其中几种常见的操作设备能力的场景。
+
+### 利用微信扫码能力
+
+为了让用户减少输入，我们可以把复杂的信息编码成一个二维码，利用宿主环境wx.scanCode这个API调起微信扫一扫，用户扫码之后，wx.scanCode的success回调会收到这个二维码所对应的字符串信息。
+
+例如餐厅点餐的小程序，我们给餐厅中每个餐桌编号1-100号，把这个数字编码到二维码中[[11\]](https://developers.weixin.qq.com/ebook?action=get_post_info&docid=000ce66493c998fb0086c8dbe5100a#_ftn11)，扫码获得编号之后，就可以知道是哪一桌点的菜，大大提高点餐体验和效率。
+
+利用wx.scanCode获取二维码的数据
+
+```javascript
+//page.js
+
+Page({
+  // 点击“扫码订餐”的按钮，触发tapScan回调
+  tapScan: function() {
+    // 调用wx.login获取微信登录凭证
+    wx.scanCode({
+      success: function(res) {
+        var num = res.result // 获取到的num就是餐桌的编号
+        console.log(res);
+      }
+    })
+  }
+})
+```
+
+**还有很多场景可以结合微信扫码能力做到很好的体验**，例如通过扫商品上的一维码做一个商品展示的小程序；通过扫共享单车上的二维码去开启单车。我们可以多思考如何利用这个扫码能力去替代一些繁琐的输入操作，让我们的小程序变得更加便捷。
+
+### 获取网络状态
+
+我们知道手机连接到互联网有几种方式：Wifi、2G、3G、4G，包括很快到来的5G，每种方式的上传速度和下载速度差异很大，它们的计费方式的差异也导致用户在使用互联网服务的时候有不同的使用习惯。
+
+Wifi相对于其他几种网络连接方式，其速度会更快。Wifi一般都是免费供用户使用，通过移动数据网络是需要根据使用流量进行计费的。我们考虑这样一个场景，小程序需要下载一些文档，然后通过小程序的能力去预览这个文档，这些文档可能文件体积比较大，对于某些用户来说，他们并不想耗费太多的数据流量去预览文档。考虑到这样的情况，我们可以通过小程序提供的获取网络状态的能力，做一些更友好的体验提示。
+
+利用wx.getNetworkType获取网络状态
+
+```javascript
+//page.js
+Page({
+  // 点击“预览文档”的按钮，触发tap回调
+  tap: function() {
+    wx.getNetworkType({
+      success: function(res) {
+        // networkType字段的有效值：
+        // wifi/2g/3g/4g/unknown(Android下不常见的网络类型)/none(无网络)
+        if (res.networkType == 'wifi') {
+          // 从网络上下载pdf文档
+          wx.downloadFile({
+            url:'http://test.com/somefile.pdf',
+            success: function (res) {
+              // 下载成功之后进行预览文档
+              wx.openDocument({
+                filePath: res.tempFilePath
+              })
+            }
+          })
+        } else {
+          wx.showToast({ title: '当前为非Wifi环境' })
+        }
+      }
+    })
+  }
+})
+```
+
+某些情况下，我们的手机连接到网络的方式会动态变化，例如手机设备连接到一个信号不稳定的Wifi热点，导致手机会经常从Wifi切换到移动数据网络。小程序宿主环境也提供了一个可以动态监听网络状态变化的接口wx.onNetworkStatusChange，让开发者可以及时根据网络状况去调整小程序的体验，wx.onNetworkStatusChange这个接口的使用场景留给读者来思考。
+
