--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6539,6 +6539,103 @@ console.log(result);
 
 ```
 
+## 385.迷你语法分析器
+
+给定一个字符串 s 表示一个整数嵌套列表，实现一个解析它的语法分析器并返回解析的结果 NestedInteger 。
+
+列表中的每个元素只可能是整数或整数嵌套列表
+
+提示：
+
+1 <= s.length <= 5 * 104
+s 由数字、方括号 "[]"、负号 '-' 、逗号 ','组成
+用例保证 s 是可解析的 NestedInteger
+输入中的所有值的范围是 [-106, 106]
+
+```
+var deserialize = function(s) {
+    let index = 0;
+    const dfs = (s) => {
+        if (s[index] === '[') {
+            index++;
+            const ni = new NestedInteger();
+            while (s[index] !== ']') {
+                ni.add(dfs(s));
+                if (s[index] === ',') {
+                    index++;
+                }
+            }
+            index++;
+            return ni;
+        } else {
+            let negative = false;
+            if (s[index] === '-') {
+                negative = true;
+                index++;
+            }
+            let num = 0;
+            while (index < s.length && isDigit(s[index])) {
+                num = num * 10 + s[index].charCodeAt() - '0'.charCodeAt();
+                index++;
+            }
+            if (negative) {
+                num *= -1;
+            }
+            return new NestedInteger(num);
+        }
+    }
+    return dfs(s);
+};
+
+const isDigit = (ch) => {
+    return parseFloat(ch).toString() === "NaN" ? false : true;
+}
+
+
+```
+
+```
+var deserialize = function(s) {
+    if (s[0] !== '[') {
+        return new NestedInteger(parseInt(s));
+    }
+    const stack = [];
+    let num = 0;
+    let negative = false;
+    for (let i = 0; i < s.length; i++) {
+        const c = s[i];
+        if (c === '-') {
+            negative = true;
+        } else if (isDigit(c)) {
+            num = num * 10 + c.charCodeAt() - '0'.charCodeAt();
+        } else if (c === '[') {
+            stack.push(new NestedInteger());
+        } else if (c === ',' || c === ']') {
+            if (isDigit(s[i - 1])) {
+                if (negative) {
+                    num *= -1;
+                }
+                stack[stack.length - 1].add(new NestedInteger(num));
+            }
+            num = 0;
+            negative = false;
+            if (c === ']' && stack.length > 1) {
+                const ni = stack.pop();
+                stack[stack.length - 1].add(ni);
+            }
+        }
+    }
+    return stack.pop();
+};
+
+const isDigit = (ch) => {
+    return parseFloat(ch).toString() === "NaN" ? false : true;
+}
+
+```
+
+
+
 ## 389. 找不同
 
 给定两个字符串 s 和 t ，它们只包含小写字母。
