--- a/牛客刷题题目/错题笔记.md
+++ b/牛客刷题题目/错题笔记.md
@@ -180,6 +180,39 @@ JavaScript RegExp 对象有 3 个方法：test()、exec() 和 compile()。
 （3）compile() 方法可以在脚本执行过程中编译正则表达式，也可以改变已有表达式。
 ```
 
+## 函数提升
+
+> 函数表达式和函数声明以及它们提升的区别
+
+- 函数声明会提升， 提升是整个函数体提升至当前作用域的顶层
+- 函数表达式没提升， **提升是提升变量**（函数的引用），表达式留在原地
+
+```js
+fun();
+function fun(){console.log(1)}
+ 
+//提升后
+function fun(){console.log(1)}
+fun(); //正常执行fun(),输出1
+```
+
+```js
+fn();
+var fn = function(){console.log(1);};
+ 
+//实际上
+var fn //提升变量
+fn()  // fn is not a function
+fn = function(){console.log(1)} //原来的位置
+```
+
+```js
+var fn = new Function(a,console.log(a));
+fn(1);//ReferenceError: a is not defined
+```
+
+
+
 
 
 
